# vector-config-controller

./: .gitattributes  .gitignore  .golangci.yaml  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
.github/workflows/: ci-code-approval.yml  ci-docker.yml
cmd/controller/: BUILD.bazel  controller.go  logs.go  main.go  metrics.go  reconcile.go  reconcile_test.go
magefiles/: alias.go  bazel.go  build.go  dep.go  init_and_config.go  push.go  test.go
pkg/k8s/: BUILD.bazel  resource.go
pkg/vector/: BUILD.bazel  config.go
tools/bazel/mock/: BUILD.bazel
tools/oci/: build_container.bzl
