load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("//tools/oci:build_container.bzl", "build_container")

go_library(
    name = "controller_lib",
    srcs = [
        "logs.go",
        "main.go",
        "metrics.go",
        "reconcile.go",
    ],
    importpath = "github.com/jacobbrewer1/vector-config-controller/cmd/controller",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/k8s",
        "//pkg/vector",
        "@com_github_caarlos0_env_v10//:env",
        "@com_github_jacobbrewer1_web//:web",
        "@com_github_jacobbrewer1_web//logging",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_client_go//kubernetes",
    ],
)

build_container("controller")

go_binary(
    name = "controller",
    embed = [":controller_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "controller_test",
    srcs = ["reconcile_test.go"],
    embed = [":controller_lib"],
    deps = ["@com_github_stretchr_testify//require"],
)
